--- a/serverless.yml
+++ b/serverless.yml
@@ -2,13 +2,17 @@
 service: ubic-food-stock-management
 frameworkVersion: '2'
 
+useDotenv: true
+
 provider:
   name: aws
   runtime: nodejs12.x
   lambdaHashingVersion: 20201221
   stage: ${opt:stage}
   region: ap-northeast-1
-  environment: ${file(.env)}
+
+custom:
+  environment: ${file(./env.yml)}
 
 resources:
       Resources:
@@ -40,4 +44,4 @@ functions:
     handler: bot/handler.index
     events:
       - http: POST bot
-    environment: ${self:provider.environment}
+    environment: ${self:custom.environment}
