--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,7 @@ provider:
   lambdaHashingVersion: 20201221
   stage: ${opt:stage}
   region: ap-northeast-1
+  role: ${self:custom.environment.role}
 
 custom:
   environment: ${file(./env.yml)}
