--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/shinbunbun/ubic-food-stock-management#readme",
   "dependencies": {
     "@line/bot-sdk": "^7.3.0",
-    "serverless": "^2.52.1"
+    "serverless": "^2.52.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
